tests/baselines/reference/unusedLocalsAndObjectSpread2.errors.txt
unusedLocalsAndObjectSpread2.ts(5,6): error TS6133: 'rest' is declared but its value is never read.
unusedLocalsAndObjectSpread2.ts(8,10): error TS6133: 'foo' is declared but its value is never read.
unusedLocalsAndObjectSpread2.ts(12,12): error TS6133: 'rest' is declared but its value is never read.


==== unusedLocalsAndObjectSpread2.ts (3 errors) ====
    declare let props: any;
    const {
        children, // here!
        active: _a, // here!
      ...rest
         ~~~~
!!! error TS6133: 'rest' is declared but its value is never read.
    } = props;
    
    function foo() {
             ~~~
!!! error TS6133: 'foo' is declared but its value is never read.
        const {
            children,
            active: _a,
            ...rest
               ~~~~
!!! error TS6133: 'rest' is declared but its value is never read.
        } = props;
    }
    
    export const asdf = 123;